--- a/index4.html
+++ b/index4.html
@@ -10,101 +10,141 @@
 </head>
 
 <body class="bg-black">
-    <!-- faq -->
-    <section>
-        <div class="container py-5">
-            <div class="max_w_Faq mx-auto">
-                <h2 class="ff_ff_opensanssans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked <span class="blueGraident textBg">Questions</span></h2>
-                <div class="pt-5 mt_12">
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button ff_opensans fw-bold fs_xs lh-md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    <div class="overflow-hidden">
+        <!-- faq -->
+        <section class="position-relative z-1">
+            <span class="FaqLeftEllips d-block">
+            </span>
+            <span class="FaqRightEllips d-block">
+            </span>
+            <span class="FaqBottomEllips d-block">
+            </span>
+            <div class="container py-4 py-md-5">
+                <div class="max_w_Faq mx-auto">
+                    <h2 class="ff_ff_opensanssans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked <span class="blueGraident textBg">Questions</span></h2>
+                    <div class="pt-4 pt-sm-5 mt_12">
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button ff_opensans fw-bold fs_xs lh-md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
      1. Do I need trading experience to invest in AI Stocks?
       </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                                <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
-                                    Not at all! Our platform is user-friendly and suitable for traders of all levels, from complete beginners to experienced professionals. The AI handles the complex analysis, so you dont need to have prior experience.
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
+                                        Not at all! Our platform is user-friendly and suitable for traders of all levels, from complete beginners to experienced professionals. The AI handles the complex analysis, so you dont need to have prior experience.
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
       2. How does AI improve my trading results?
       </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
-                                    AI enhances your trading results by processing data at incredible speeds, making precise decisions, adapting to market changes, and automating tasks for optimal efficiency and risk management.
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
+                                        AI enhances your trading results by processing data at incredible speeds, making precise decisions, adapting to market changes, and automating tasks for optimal efficiency and risk management.
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
      <span class="max_w_heading"> 3. How much does it cost to use the AI Trading Platform, and are there any discounts available?</span>
       </button>
-                            </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
-                                    The standard cost for our AI Trading Platform is $500, but with a limited-time 50% discount, you can begin your trading journey for as low as $250. Moreover, you have the flexibility to start with any amount between $250 and $10,000
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
+                                        The standard cost for our AI Trading Platform is $500, but with a limited-time 50% discount, you can begin your trading journey for as low as $250. Moreover, you have the flexibility to start with any amount between $250 and $10,000
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
      <span class="max_w_heading">4. How can i start using the trading platform?</span>
       </button>
-                            </h2>
-                            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
-                                    The standard cost for our AI Trading Platform is $500, but with a limited-time 50% discount, you can begin your trading journey for as low as $250. Moreover, you have the flexibility to start with any amount between $250 and $10,000
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
+                                        The standard cost for our AI Trading Platform is $500, but with a limited-time 50% discount, you can begin your trading journey for as low as $250. Moreover, you have the flexibility to start with any amount between $250 and $10,000
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- section -->
-    <div class="py-5">
-        <div class="py-5 my-1 container">
-            <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0 max_w_AiStock mx-auto pb-1">Take the <span class="blueGraident textBg">first step</span> into <span class="blueGraident textBg ">AI Stock</span> Trading</h2>
-            <p class="ff_opensans fw-normal fs_xs lh_md white opacity-80 text-center pt-4">In a matter of minutes, one of our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
-            <div class="row align-items-center pt-5 mt-3">
-                <div class="col-6">
-                    <div class="AiStockCard">
-                        <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !</h3>
-                        <form>
-                            <div class=" d-flex align-items-center gap-2"> <input type="text" placeholder="First Name" class="AiStockInput w-50">
-                                <input type="text" placeholder="Last Name" class="AiStockInput w-50"></div>
-                            <input type="text" placeholder="Email" class="AiStockInput w-100 mt-2">
-                            <div class=""><input type="text" placeholder="Phone Number" class="AiStockInput w-100 mt-2"></div>
-                            <button class=" mt-4 btnSignup">Sign Up</button>
-                        </form>
+        </section>
+        <!-- section -->
+        <div class="py-5 position-relative z-1">
+            <span class="d-block Ai_stackLeftEllips"></span>
+            <span class="d-block Ai_stackRightEllips"></span>
+            <div class="py-lg-5 my-1 container">
+                <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0 max_w_AiStock mx-auto pb-1">Take the <span class="blueGraident textBg">first step</span> into <span class="blueGraident textBg ">AI Stock</span> Trading</h2>
+                <p class="ff_opensans fw-normal fs_xs lh_md white opacity-80 text-center pt-4">In a matter of minutes, one of our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
+                <div class="row align-items-center pt-5 mt-3 min_h flex-column-reverse flex-lg-row">
+                    <div class="col-12 col-lg-6 pt-4 pt-lg-0">
+                        <div class="AiStockCard mx-auto">
+                            <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !</h3>
+                            <form id="signupForm">
+                                <div class="d-sm-flex align-items-center gap-2 mt-4">
+                                    <div class="w-100 w-sm-50"> <input id="name" type="text" placeholder="First Name" class="email-input-style-header ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place ">
+                                        <p class="mb-0 text-white" id="errorname"></p>
+                                    </div>
+                                    <div class="w-100 w-sm-50"> <input id="lastname" type="text" placeholder="Last Name" class="email-input-style-header ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place  mt-2 mt-sm-0">
+                                        <p class="mb-0 text-white" id="errorlastname"></p>
+                                    </div>
+                                </div>
+                                <input id="email" type="email" placeholder="Email" class="email-input-style-header mt-3 ff_opensans fw-normal fs-xs lh_xsm c-black-100 AiStockInput place">
+                                <p class="mb-0 text-white" id="erroremail"></p>
+                                <div class="d-flex align-items-center rounded-1 overflow-hidden mt-3 borderInput">
+                                    <div class="d-flex align-items-center bg_grayblack white gap-1 p-3">+91
+                                        <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#010101" />
+            </svg>
+                                    </div>
+                                    <input id="number" type="tel" placeholder="Phone Number" class="email-input-style-header bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone">
+                                </div>
+                                <p class="mb-0 text-white" id="errornumber"></p>
+                                <button id="submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button">Sign Up</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="position-relative z-1">
+                                <div class="imgAi"><img class="w-100 " src="./assets/images/webp/aws.webp" alt="img"></div>
+                                <div class="imgAi"><img class="w-100 " src="./assets/images/webp/mainImg.webp" alt="img"></div>
+                                <div class="imgAi"><img class="w-100 " src="./assets/images/webp/arusta.webp" alt="img"></div>
+                                <div class="imgAi imgPostion2"><img class="w-100" src="./assets/images/webp/palantir.webp" alt="img"></div>
+                                <div class="imgAi imgPostion"><img class="w-100" src="./assets/images/webp/iconImg.webp" alt="img"></div>
+                                <div class="imgAi imgPostion3"><img class="w-100" src="./assets/images/webp/nvidia.webp" alt="img"></div>
+                                <div class="imgAi imgPostion4"><img class="w-100" src="./assets/images/webp/path.webp" alt="img"></div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- footer -->
-    <footer class="bg_footer mt-sm-5 pt-sm-5">
-        <div class="mt-md-5 ">
-            <div class="container pt-5 pb-4 mb-md-3">
-                <div class="d-flex justify-content-between flex-wrap align-items-center mb-0">
+        <!-- footer  -->
+        <footer class="mt-md-5 pt-5 position-relative z-1">
+            <span class="footerLeft d-block"></span>
+            <span class="footerRight d-block"></span>
+            <div class="container pt-lg-5 pb-4 pb-lg-5">
+                <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
-                        <p class="open fs_lg fw-bold white mb-0">AI STOCKS</p>
-                        <p class="open fs_xs fw-normal white lh_xxl mb-0 opacity pt-3 ">
+                        <p class="open fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
+                        <p class="open fs_xs fw-normal white lh_xxl mb-0 opacity pt-3 d-none d-sm-block ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
+                        <p class=" d-sm-none ff_opensans fs_xs fw-normal white lh_xxl mb-0 opacity pt-3">Privacy Policy | Conditions | Report Abuse/ Spam</p>
                     </div>
-                    <div class="d-flex jusity-content-center flex-column pt-3 pt-sm-0">
-                        <p class="open fw-semibold fs_sm lh_xxl white mb-0">
+                    <div class="d-flex jusity-content-center flex-column py-3 mt_12 mt-sm-0 py-sm-0">
+                        <p class="open fw-semibold fs_sm lh_xxl white mb-0 text-center">
                             Follow Us on
                         </p>
                         <div class="d-flex justify-content-center gapFooterLink footerPadding">
@@ -135,8 +175,8 @@
                         </div>
                     </div>
                 </div>
-                <div class=" mt-3">
-                    <p class="ff_opensans fw-bold fs_sm lh_md white mb-0 ">
+                <div class="mt-lg-4 pt-3 d-none d-sm-block">
+                    <p class="ff_opensans fw-bold fs_md lh_2lg white mb-0 ">
                         Disclaimer
                     </p>
                     <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 lh_xxl opacity pt-3">
@@ -146,22 +186,24 @@
                     </p>
                 </div>
             </div>
-            <span class="borderTop d-block"></span>
+            <span class="borderTop d-block mt-lg-4"></span>
             <div class=" FooterBottomPadding">
                 <div class="container">
-                    <div class="d-flex justify-content-between flex-wrap align-items-center">
-                        <p class="ff_opensans fw-normal fs_xs lh_xxl white opacity mb-0 ">
+                    <div class="d-flex justify-content-center justify-content-sm-between flex-wrap align-items-center">
+                        <p class="ff_opensans fw-normal fs_xs lh_xxl white opacity mb-0  d-none d-sm-block">
                             Privacy Policy <span>|</span> Conditions
                         </p>
                         <p class="ff_opensans fw-normal fs_xs lh_xxl white mb-0 opacity pt-2 pt-sm-0 ">
-                            Report Abuse | Copyright@2024
+                            <span class="d-none d-sm-block"></span> Report Abuse | Copyright@2024
                         </p>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/app4.js"></script>
 </body>
 
 </html>
