--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
 </head>
 
 <body class="bg_body">
-    <!--=======================header-section=====================-->
+    <!-- header section  -->
     <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
         <nav class=" py-12 nav-background position-relative  z-1">
             <div class="container">
                 <div class=" d-flex  justify-content-between align-items-center ">
                     <ul class=" mb-0 ps-0">
-                        <li><a href="#" class=" text-decoration-none ff_opensans fw-bold  fs_8xl lh_8xl text-white  ">AI
+                        <li><a aria-label="logo" href="#"
+                                class=" text-decoration-none ff_opensans fw-bold  fs_8xl lh_8xl text-white  ">AI
                                 STOCKS</a></li>
                     </ul>
                     <ul class=" mb-0 ps-0">
-                        <li><a href="#"
-                                class=" text-decoration-none ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Sign
+                        <li><a aria-label="sign-up" href="#"
+                                class=" text-decoration-none d-block ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Sign
                                 Up</a></li>
                     </ul>
                 </div>
             </div>
             <div class="linner-layer-bottom"></div>
+            <div class="border-3-gradiant"></div>
         </nav>
         <div class=" container ">
             <div class="px_2">
@@ -54,10 +56,10 @@
                         130.66% in 2024</span>
                 </p>
                 <div
-                    class=" d-flex align-items-center  align-items-lg-start justify-content-between flex-column  flex-lg-row   align-items-start   mt-39">
+                    class=" d-flex align-items-center  align-items-lg-start    justify-content-between flex-column  flex-lg-row   align-items-start   mt-39">
                     <div class="max-w-654">
                         <div class="vedio position-relative  z-1">
-                            <video src="./assets/images/vedio/car.mp4" autoplay="autoplay" loop
+                            <video id="vid" src="./assets/images/vedio/car.mp4" muted autoplay="autoplay" loop="true"
                                 class="w-100  h-100 d-block  "></video>
                             <span class="vedio-tag"><svg width="121" height="120" viewBox="0 0 121 120" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -132,8 +134,7 @@
                                     <g filter="url(#filter0_b_1162_103)">
                                         <rect x="33.7734" y="33.6631" width="54.2593" height="54.2593" rx="27.1296"
                                             fill="black" fill-opacity="0.14" />
-                                        <path d="M54.9492 49.5452V72.9899L73.8563 61.2676L54.9492 49.5452Z"
-                                            fill="white" />
+                                        <path d="M54.9492 49.5452V72.9899L73.8563 61.2676L54.9492 49.5452Z" fill="white" />
                                     </g>
                                     <defs>
                                         <filter id="filter0_b_1162_103" x="18.6478" y="18.5374" width="84.5111"
@@ -143,8 +144,8 @@
                                             <feGaussianBlur in="BackgroundImageFix" stdDeviation="7.56283" />
                                             <feComposite in2="SourceAlpha" operator="in"
                                                 result="effect1_backgroundBlur_1162_103" />
-                                            <feBlend mode="normal" in="SourceGraphic"
-                                                in2="effect1_backgroundBlur_1162_103" result="shape" />
+                                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1162_103"
+                                                result="shape" />
                                         </filter>
                                     </defs>
                                 </svg>
@@ -213,16 +214,16 @@
                                         class="email-input-style-header  ff_opensans fw-normal   fs-xs lh_xsm c-black-100 ">
                                 </div>
                                 <p class=" mb-0 text-white " id="errornumber"></p>
-                                <button id="submit" type="submit"
+                                <button aria-label="fromsubmit" id="submit" type="submit"
                                     class=" mt-32 text-decoration-none w-100 ff_opensans text_black fw-bold fs_xs lh_xsm nav-button  ">Get
                                     Started</button>
                             </form>
                         </div>
                         <p class="ff_opensans fw-bold  fs_md lh_2lg text-center text-white mt-14 mb-0 ">1 Spot Left</p>
-                        <span class="ellipes-card-email d-none d-md-block "></span>
-                        <span class="ellipes2-card-email d-none d-md-block "></span>
+                        <span class="ellipes-card-email d-none  d-md-block "></span>
+                        <span class="ellipes2-card-email d-none  d-md-block "></span>
                     </div>
-                    <div class=" d-block d-lg-none ">
+                    <div class=" d-block  d-lg-none ">
                         <p class="ff_opensans mb-0 mt-20 fs_sm fw-bold lh_2md text-center text-white ">Due to
                             extremely
                             high demand
@@ -265,16 +266,16 @@
         <span class=" ellipes4headerright-top d-none d-sm-block"></span>
         <span class=" ellipes5headerright-bottom d-none d-sm-block"></span>
     </header>
-    <!--=====================silder-by-keyframes==================-->
-    <section class="position-relative overflow-hidden mx-auto mb-5">
+    <!-- silder by  keyframes  -->
+    <section class="position-relative d-flex gap-20 overflow-hidden mx-auto mb-5">
         <div class="d-flex align-items-center gap-20 brand_slider_parent position-relative  start-0 top-0 h-100">
             <div class="man-profile-card  d-flex  align-items-center  gap-3">
                 <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
                 <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Esther Howard</h2>
                     <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                            class='c-light-green'>$2,208</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,361</p>
                 </div>
             </div>
             <div class="man-profile-card  d-flex  align-items-center  gap-3">
@@ -293,10 +294,10 @@
                     <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
                 </span>
                 <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Devon Lane</h2>
                     <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                            class='c-light-green'>$5,265</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $3,489</p>
                 </div>
             </div>
             <div class="man-profile-card  d-flex  align-items-center  gap-3">
@@ -304,10 +305,10 @@
                     <img src="./assets/images/svg/girlface.svg" alt="girlface">
                 </span>
                 <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Ralph Edwards</h2>
                     <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                            class='c-light-green'>$4,654</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,584</p>
                 </div>
             </div>
         </div>
@@ -315,10 +316,10 @@
             <div class="man-profile-card  d-flex  align-items-center  gap-3">
                 <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
                 <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Esther Howard</h2>
                     <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                            class='c-light-green'>$2,208</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,361</p>
                 </div>
             </div>
             <div class="man-profile-card  d-flex  align-items-center  gap-3">
@@ -337,10 +338,10 @@
                     <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
                 </span>
                 <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Devon Lane</h2>
                     <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                            class='c-light-green'>$5,265</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $3,489</p>
                 </div>
             </div>
             <div class="man-profile-card  d-flex  align-items-center  gap-3">
@@ -348,15 +349,15 @@
                     <img src="./assets/images/svg/girlface.svg" alt="girlface">
                 </span>
                 <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
+                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Ralph Edwards</h2>
                     <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
+                            class='c-light-green'>$4,654</span></p>
+                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,584</p>
                 </div>
             </div>
         </div>
     </section>
-    <!-- next one -->
+
     </div>
     <!--------------------------------------------------- benifit-section --------------------------------------------------->
     <div class="section_bg pt-lg-4 overflow-x-clip">
